nav bar update - responsive

--- a/homepage.html
+++ b/homepage.html
@@ -12,6 +12,11 @@
             <li class="logo">
             logo
             </li>
+            <li class = "btn">
+                <div class="wrap"></div>
+                <div class="wrap"></div>
+                <div class="wrap"></div>                
+            </li>
             <div class="nav-name">
                 <li><a href="1">homepage</a></li>
                 <li><a href="1">DC Comics</a></li>
