most requirements fufil

--- a/public/DC.html
+++ b/public/DC.html
@@ -31,7 +31,7 @@
         <div class="nav-name">
           <li class="home"><a href="/">homepage</a></li>
           <li><a href="/dc">DC Comics</a></li>
-          <li><a href="1">Marvel Comics</a></li>
+          <li><a href="/marvel">Marvel Comics</a></li>
         </div>
       </ul>
     </nav>
